# Skedule

./: .gitignore  DOCKERFILE  Dockerfile  FAQ  README.md  logger_config.py  main.py  pyproject.toml  switch_profile
.github/workflows/: deploy.yml
api/: api.py
database/: database-configuration.md  database.db  docker-guide.md  installation.md  interface.py  migrate.py  models.py  telegram.py
docs/: BotScheme.drawio  Database Diagram.drawio  MainWork.drawio  OnStartup.drawio  ProjectDiagram.drawio  StartMessage.drawio  database-configuration.md  database.md  devblog.md
geopatterns/: example.py  geopatterns.py  svg.py  test.py
resources/: ads.json  announcements.json  test.py  texts.json  update_message.md
resources/texts/: confirm_class.txt  confirm_name.txt  enter_letter.txt  enter_name.txt  enter_parallel.txt  enter_subclass.txt  greeting.txt  help_message.txt  help_on_startup.txt  main_menu.txt  main_menu_text.txt  misc_menu.txt  save_student_class.txt  save_teacher_name.txt  select_dayweek.txt  texts.json
support-scripts/: deploy.sh  get_docker_host.sh  get_logs.sh  load_from_csv.py  migrate.py  run_python.sh
telegram/: bot.py  callback.py  callback_enum.py  enums.py  handlers.py  support_functions.py
telegram_bot/: bot.py  enums.py  handlers.py  handlers_v2.py  support_functions.py
