[tool.poetry]
name = "skedule"
version = "0.1.0"
description = ""
authors = ["Dartt0n <antonkudryavtsevdoem@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.20"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
loguru = "^0.5.3"
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
