[tool.poetry]
name = "skedule"
version = "0.2.0"
description = ""

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.20"
requests = "^2.25.1"
python-telegram-bot = "^13.7"
jproperties = "^2.1.0"
mariadb = "^1.0.7"
DateTimeRange = "^1.2.0"

[tool.poetry.dev-dependencies]
loguru = "^0.5.3"
black = "^21.6b0"
ptpython = "^3.0.19"
rope = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
